--- a/第二天/11-input表单元素.html
+++ b/第二天/11-input表单元素.html
@@ -8,16 +8,16 @@
 <body>
     <form action="demo.php" method="POST" name="username">
         <!-- text是文本框，用户可以输入任何文字 -->
-        用户名：<input type="text" name="pwd" id="" value="请输入用户明"><br>
+        用户名：<input type="text" name="pwd" id="" value="请输入用户明" maxlength="6"><br>
         <!-- password是密码框用户看不见 -->
         密码：<input type="password"><br>
 
         <!-- radio是单选按钮可以多选一 -->
         <!-- name是表单元素的名字 单选按钮必须有相同的名字 -->
-        
-        性别：男<input type="radio" name="sex" id="" value="男"> 女<input type="radio" name="sex" id="" value="女"> 人妖 <input type="radio" name="sex" id="" value="人妖"> <br>
+        <!-- 单选按钮和复选按钮可以设置checked属性，当页面打开得时候就可以默认选中这个按钮 -->
+        性别：男<input type="radio" name="sex" id="" value="男"> 女<input type="radio" name="sex" id="" value="女" checked="checked"> 人妖 <input type="radio" name="sex" id="" value="人妖"> <br>
         <!-- checkbox是单选按钮可以多选一 -->
-        爱好：吃饭 <input type="checkbox" name="hobby" id="" value="吃饭"> 睡觉 <input type="checkbox" name="hobby" id="" value="睡觉"> 打豆豆 <input type="checkbox" name="hobby" id="" value="打豆豆">
+        爱好：吃饭 <input type="checkbox" name="hobby" id="" value="吃饭"> 睡觉 <input type="checkbox" name="hobby" id="" value="睡觉"> 打豆豆 <input type="checkbox" name="hobby" id="" value="打豆豆" checked="checked">
 
 
     </form>
