--- a/第二天/11-input表单元素.html
+++ b/第二天/11-input表单元素.html
@@ -20,6 +20,17 @@
         爱好：吃饭 <input type="checkbox" name="hobby" id="" value="吃饭"> 睡觉 <input type="checkbox" name="hobby" id="" value="睡觉"> 打豆豆 <input type="checkbox" name="hobby" id="" value="打豆豆" checked="checked">
 
 
+        <br>
+        <!-- 点击了提交按钮可以把表单域form里面的表单元素里面的值提交给服务器 -->
+        <input type="submit" value="免费注册" name="" id="">
+
+        <br>
+        <!-- 重置按钮可以还原表单元素初始的默认状态 -->
+        <input type="reset" value="重新设置" name="" id="">
+        <!-- 普通按钮 后期结合js使用 -->
+        <input type="button" value="获取短信验证码" name="" id=""><br>
+        <!-- 文件域，上传文件使用 -->
+        上传头像：<input type="file" name="" id="">
     </form>
 </body>
 </html>
