--- a/第二天/12-label标签.html
+++ b/第二天/12-label标签.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <label for="text">用户名：</label> <input type="text" name="" id="text">
-    <input type="radio" name="" id="nan"> <label for="nan">男</label>
+    <input type="radio" name="sex" id="nan"> <label for="nan">男</label>
+    <input type="radio" name="sex" id="nv"> <label for="nv">女</label>
 </body>
 </html>
