--- a/学校作业/html-cssweb/login.html
+++ b/学校作业/html-cssweb/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="01表格.html" class="login">
+    <form action="page.html" class="login">
         <h1>Welcome</h1>
         <input type="text" name="" id="" placeholder="Username 用户名">
         <input type="password" name="" id="" placeholder="Password 密码">
