--- a/学校作业/html-cssweb/page.html
+++ b/学校作业/html-cssweb/page.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>影评</title>
-    <link rel="stylesheet" href="style1.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
+
 <body>
-    <h1 >热门影片</h1>
-    <form action="">
-        
-        <table>
-            <tr>
-                <td><a href="https://www.bilibili.com/bangumi/media/md28229909/?spm_id_from=666.25.b_6d656469615f6d6f64756c65.1">疯狂的麦克斯<img src="image/1.png" alt="WTF"></a></td>
-            </tr>
-        </table>
-    </form>
-    
+    <h1> 中秋节的那些事</h1>
+
+    1.中秋是怎样由来的 <br>
+    2.<a href="#oldman">吃月饼的由来</a> <br>
+    <h2> 中秋节是怎样由来的</h2>
+
+    <p> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp中秋节，又称祭月节、月光诞、月夕、秋节、仲秋节、拜月节、月娘节、月亮节、团圆节等，是中国民间的传统节日。中秋节源自天象崇拜，由上古时代秋夕祭月演变而来。最初“祭月节”的节期是在干支历二十四节气“秋分”这天，后来才调至夏历（农历）八月十五，也有些地方将中秋节定在夏历八月十六
+        。中秋节自古便有祭月、赏月、吃月饼、玩花灯、赏桂花、饮桂花酒等民俗，流传至今，经久不息。</p>
+
+    <img src="image/1.jpg">
+
+    <h2 id="oldman"> 月饼的由来</h2>
+
+    <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp我们都知道月饼是中秋的节令食品。但为什么要在中秋这天吃月饼呢？有人说，因为月饼是圆形的，象征天上的圆月；也有人说，圆圆的月饼应和天上的月亮，反映了人们期盼团聚的美好愿望。<br>
+
+        　　月饼，又称胡饼、宫饼、小饼、月团、团圆饼等，是古代中秋祭拜月神的供品，沿传下来，便函形成了中秋吃月饼的习俗。<br>
+
+        　　月饼，在我国有着悠久的历史。据史料记载，早在殷、周时期，江浙一带就有一种纪念太师闻仲的边薄心厚的“太师饼”，是我国月饼的“始祖”。汉代张骞出使西域时，引进芝麻、胡核，为月饼的制作增添了辅料，这时便出现了以胡桃仁为馅的圆形饼，名曰“胡饼”。<br>
+
+        　　唐代，民间已有从事生产的饼师，京城长安也开始出现糕饼铺。据说，有一年中秋之夜，唐太宗和杨贵妃爷望皎洁的明月，心潮澎湃，随口而出“月饼”，从此“月饼”的名称便在民间逐渐传开。<br>
+
+        　　北宋皇家中秋节喜欢吃一种“宫饼”，民间俗称为“小饼”、“月团”。苏东坡有诗云：“小饼如嚼月，中有酥和怡。”宋代的文学家周密，在记叙南宋都城临安见闻的《武林旧事》中首次提到“月饼”之名称。到了明代，中秋吃月饼才在民间逐渐流传。当时心灵手巧的饼师，反嫦娥奔月的神话故事作为仪器艺术图案印在月饼上，使月饼成为更受人民青睐的中秋佳节的必备食品。<br>　
+        &nbsp&nbsp中秋节吃月饼据说始于元代，当时，朱元璋领导汉族人民反抗元朝暴政，约定在八月十五日这一天起义，以互赠月饼的办法把字条夹在月饼中传递消息。中秋节吃月饼的习俗便在民间传开来。英语拼写为：mooncake（月亮蛋糕）。<br>
+
+        　　后来，朱元璋终于把元朝推翻，成为明朝的第一个皇帝，虽然其后清朝人入主中国，但是人们仍旧庆祝这个象征推翻异族统治的节日。<br>
+
+        　　相传我国古代，帝王就有春天祭日、秋天祭月的礼制。在民间，每逢八月中秋，也有左右拜月或祭月的风俗。“八月十五月儿圆，中秋月饼香又甜”，这句名谚道出中秋之夜城乡人民吃月饼的习俗。月饼最初是用来祭奉月神的祭品，后来人们逐渐把中秋赏月与品尝月饼，作为家人团圆的象征，慢慢月饼也就成了节日的礼品。<br>
+
+        　　月饼，最初起源于唐朝军队祝捷食品。唐高祖年间，大将军李靖征讨匈奴得胜，八月十五凯旋而归。当时有人经商的吐鲁番人向唐朝皇帝献饼祝捷。高祖李渊接过华丽的饼盒，拿出圆饼，笑指空中明月说：“应将胡饼邀蟾蜍”。说完把饼分给群臣一起吃。<br>
+
+        　　南宋吴自牧的《梦粱录》一书，已有“月饼”一词，但对中秋尝月，吃月饼的描述，是明代的《西湖游览志会》才有记载：“八月十五日谓之中秋，民间以月饼相遗，取团圆之义”。到了清代，关于月饼的记载就多起来了，而且制作越来越精细。
+
+        　　月饼发展到今日，品种更加繁多，风味因地各异。其中京式、苏式、广式、潮式等月饼广为我国南北各地的人们所喜食。</p>
+
+    <img src="image/2.jpg">
+
+    <p>更多内容可以 <a href="http://www.baidu.com" target="_blank">百度一下</a> </p>
 </body>
+
 </html>
