--- a/第三天/10-字体属性之文字大小.html
+++ b/第三天/10-字体属性之文字大小.html
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    h2 {
-      font-family: '微软雅黑';
-    }
-    p {
-      font-family: '微软雅黑',Arial, Helvetica, sans-serif;
-    }
-  </style>
 </head>
+<style>
+  body {
+    font-size: 16px;
+  }
+  /* 标题标签比较特殊，需要单独指定文字大小 */
+  h2 {
+    font-size: 16px;
+  }
+</style>
 <body>
   <h2>难过</h2>
   <p>1</p>
