--- a/第三天/11-字体属性之字体粗细.html
+++ b/第三天/11-字体属性之字体粗细.html
@@ -4,18 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <style>
-    h2 {
-      font-family: '微软雅黑';
-    }
-    p {
-      font-family: '微软雅黑',Arial, Helvetica, sans-serif;
-    }
-  </style>
 </head>
+<style>
+  .bold {
+    /* font-weight: bold; */
+    /* 七百后面不要加单位，700加粗 */
+    /* 实际开发数字加粗变细 */
+    font-weight: 700;
+  }
+
+  h2 {
+    font-weight: 400;
+  }
+</style>
 <body>
   <h2>难过</h2>
-  <p>1</p>
+  <p class="bold">1</p>
   <p>2</p>
   <p>3</p>
   <p>4</p>
